--- a/src/input.css
+++ b/src/input.css
@@ -49,7 +49,7 @@ body{
   background-color: hsl(0, 0%, 8%);
 }
 
-section{
+main{
   background-color: hsl(0, 0%, 12%);
   display: flex;
   flex-direction: column;
