--- a/src/output.css
+++ b/src/output.css
@@ -678,12 +678,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 *,
 *::after,
 *::before {
@@ -704,7 +698,7 @@ body{
   background-color: hsl(0, 0%, 8%);
 }
 
-section{
+main{
   background-color: hsl(0, 0%, 12%);
   display: flex;
   flex-direction: column;
